# dino-ip-adapter-refiners

./: .gitignore  README.md  benchmark.py  finetune-ldm-dino-ip-adapter.py  precompute_data.py  precompute_embeddings_dino_ip_adapter.py  pyproject.toml
configs/: finetune-ldm-dino-ip-adapter-a100_weighted_sum_full_training.toml  finetune-ldm-dino-ip-adapter-a100_weighted_sum_full_training_webdataset.toml  minsnr_test.toml  minsnr_test_lower.toml  minsnr_test_lower_webdataset.toml  tests.toml  tests_webdataset.toml
src/dino_ip_adapter_refiners/: batch.py  config.py  diffusion_utils.py  main.py  trainer.py  utils.py
src/dino_ip_adapter_refiners/data/: __init__.py  mosaic.py  utils.py  webdataset.py
src/dino_ip_adapter_refiners/mixin/: __init__.py  amp.py  base.py  data.py  evaluation.py  ip_adapter.py  mosaic_data.py  sd1.py  webdataset_data.py
