[project]
name = "dino-ip-adapter-refiners"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "limiteinductive", email = "benjamintrom@gmail.com" }
]
dependencies = [
    "refiners @ git+https://github.com/finegrain-ai/refiners.git@2b48988c078a1f570aeaf9366074f5cc77921599",
    "tqdm>=4.66.2",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "pyright>=1.1.356",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/dino_ip_adapter_refiners"]
