[project]
name = "dino-ip-adapter-refiners"
version = "0.1.0"
description = "Training and inference code for DINO-IP Adapter with the Refiners micro-framework"
authors = [
    { name = "isamu", email = "isamu.website@gmail.com" }
]
dependencies = [
    "refiners[training] @ git+https://github.com/finegrain-ai/refiners.git@2b48988c078a1f570aeaf9366074f5cc77921599",
    "tqdm>=4.66.2",
    "python-dotenv>=1.0.1",
    "webdataset>=0.2.86",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "pyright>=1.1.356",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/dino_ip_adapter_refiners"]

[tool.pyright]
include = ["src/refiners", "tests", "scripts"]
strict = ["*"]
exclude = ["**/__pycache__", "tests/weights"]
reportMissingTypeStubs = "warning"
